--- a/Kotlin/面向对象（上）/方法.md
+++ b/Kotlin/面向对象（上）/方法.md
@@ -100,4 +100,39 @@ println(age)	// 28
 
 
 
-## 数据类和返回多个值的函数
+## 返回多个值的函数
+
+Kotlin本身并不支持定义返回多个值的函数或方法，但通过解构，可以让函数返回多个值。
+
+本质上就是让Kotlin返回一个支持解构的对象。
+
+Kotlin标准库提供了**Pair**和**Triple**两个数据类，
+
+Pair数据类可包含两个任意类型的属性
+
+Triple可包含三个任意类型的属性
+
+~~~kotlin
+fun test():Pair<String,Int>{
+    return Pair("test",28)
+}
+fun main(){
+    var (name,age) = test()
+    println("$name,$age")
+}
+~~~
+
+
+
+## 在Lambda表达式中解构
+
+Kotlin允许对Lambda表达式使用解构，如果Lambda表达式的参数是支持解构的类型（如Pair或Map.Entry等）那么即可通过将它们放在括号中引入多个新参数来代替单个参数。
+
+例如，如下两种写法是一致的：
+
+~~~kotlin
+map.mapValues{entry -> "${entry.value}!"}
+//使用解构，将entry解构成(key,value)
+map.mapValues{(key,value) -> "$value!"}
+~~~
+
