--- a/Kotlin/面向对象（下）/扩展.md
+++ b/Kotlin/面向对象（下）/扩展.md
@@ -2,7 +2,7 @@
 
 > Kotlin 支持扩展方法和扩展属性
 
-
+> 扩展与类、接口一样，如果扩展定义在其他包中，一样也需要使用 **import** 进行导包
 
 ## 扩展方法
 
@@ -25,9 +25,9 @@ fun Test.test(){
 
 ## 扩展的实现机制
 
-​		Java是一门静态语言，实际上，Kotlin的扩展并没有真正地修改所扩展的类。Kotlin扩展的本质是定义了一个函数，当程序用对象调用扩展方法时，Kotlin在编译时会执行静态解析——就是根据调用对象、方法名找到扩展函数，转换为函数调用。
+Java是一门静态语言，实际上，Kotlin的扩展并没有真正地修改所扩展的类。Kotlin扩展的本质是定义了一个函数，当程序用对象调用扩展方法时，Kotlin在编译时会执行静态解析——就是根据调用对象、方法名找到扩展函数，转换为函数调用。
 
-​		如下代码：
+如下代码：
 
 ~~~kotlin
 fun main(){
@@ -72,3 +72,105 @@ fun main(){
 
 > 成员方法执行动态解析，扩展方法执行静态解析
 
+
+
+* 由上面介绍的解析扩展方法的步骤还可知，**成员方法的优先级高于扩展方法**
+
+~~~kotlin
+class Test(){
+    fun foo() = println("成员方法")
+}
+fun Test.foo = println("扩展方法")
+fun main(){
+    val t = Test()
+    t.foo()		// 输出"成员方法"
+}
+~~~
+
+> 编译器会警告：扩展方法被成员方法屏蔽
+
+
+
+## 为可空类型扩展方法
+
+Kotlin还允许为可空类型扩展方法，这样使得 **null** 值也可调用该扩展方法。
+
+~~~kotlin
+fun Any?.equals(other:Any?):Boolean{
+    if( this == null ){
+        return if(other==null) true else false
+    }
+    return this.equals(other)
+}
+fun main(){
+    var a = null
+    println(a.equals(null))		//true
+    println(a.equals("Kotlin"))		//false
+}
+~~~
+
+
+
+## 扩展属性
+
+Kotlin也允许扩展属性，当由于Kotlin的扩展并不能真正修改目标类，因此Kotlin扩展的属性其实是通过添加 **getter**、**setter** 方法实现的，**没有幕后字段**。
+
+**扩展的属性只能是计算属性：**
+
+* 扩展属性不能有初始值（没有存储属性值的幕后字段）。
+* 不能用 **field** 关键字显式访问幕后字段。
+* 扩展只读属性必须提供 **getter** 方法，扩展读写属性必须提供 **getter、setter** 方法。
+
+~~~kotlin
+class User(var first:String,var last:String){
+    
+}
+// 为User类扩展读写属性
+var User.fullName: String
+	get() = "$first.$last"
+	set(value){
+        // value 字符串中有且只有一个.
+        if("." !in value || value.indexOf(".") != value.lastIndexOf(".")){
+            println("输入不合法")
+        }else{
+            var tokens = value.split(".")
+            first = tokens[0]
+            last = tokens[1]
+        }
+    }
+~~~
+
+
+
+## 以成员方式定义扩展
+
+Kotlin 还支持以类成员的方式定义扩展。
+
+* 对于以类成员方式定义的扩展，一方面它属于被扩展的类，因此在扩展方法（属性）中可直接调用被扩展类的成员（省略 **this** 前缀）；另一方面它又位于定义它所在类的类体中，因此在扩展方法（属性）中又可直接调用它所在类的成员（省略 **this** 前缀）。
+
+~~~Kotlin
+class A{
+    fun foo() = println("A的foo方法")
+}
+class B{
+    fun foo() = println("B的foo方法")
+    //以成员方式为A扩展test（）方法
+    fun A.test(){
+        //在改方法内既可以调用类A的成员，也可调用类B的成员
+        foo()	//调用B的foo（）方法
+        this@A.foo()	//调用A的foo（）方法
+    }
+}
+~~~
+
+> 在上面的例子里，A和B的foo方法重名，可以使用带标签的 this 指定调用谁的方法
+
+> Kotlin 的 **this** 支持用 **@类名** 形式限制 **this** 代表哪个类的对象
+
+
+
+## 带接收者的匿名函数
+
+《疯狂Kotlin讲义》p184
+
+> 没看懂
