数组和集合部分搞定

--- a/Kotlin/数组和集合/集合概述.md
+++ b/Kotlin/数组和集合/集合概述.md
@@ -1,2 +1,15 @@
 # 集合概述
 
+与 Java 不同的是 Kotlin 的集合分为两大类：可变集合和不可变集合。
+
+不可变集合只能读取元素。
+
+
+
+* Collection集合体系继承树的简化图
+
+![Collection集合体系继承树简化图](https://github.com/hahaha28/photos/raw/master/notebooks/Kotlin/Collection集合体系继承树简化图.png)
+
+* Map集合体系继承树图
+
+![Map集合体系继承树图](https://github.com/hahaha28/photos/raw/master/notebooks/Kotlin/Map集合体系继承树图.png)
