什么android，我吐了

--- a/Kotlin/面向对象（下）/抽象类.md
+++ b/Kotlin/面向对象（下）/抽象类.md
@@ -1,2 +1,28 @@
 # 抽象类
 
+> 有 `abstract` 修饰的方法无须使用 `open` 修饰
+
+> 抽象类中的具体方法、属性依然默认有 `final` 修饰
+
+
+
+## 定义
+
+使用 `abstract` 修饰
+
+注意事项：
+
+* 抽象类有构造器，但不能创建实例，构造器主要用于被子类调用
+* 含有抽象成员的类只能被定义成抽象类
+
+```kotlin
+abstract class Shape{
+    var color = ""
+    constructor(color: String){
+        this.color = color
+    }
+    // 定义一个计算周长的抽象方法
+    abstract fun calPerimeter():Double
+}
+```
+
