--- a/Kotlin/面向对象（下）/对象表达式和对象声明.md
+++ b/Kotlin/面向对象（下）/对象表达式和对象声明.md
@@ -70,7 +70,7 @@ fun main(){
 
 ## 识别对象表达式类型
 
-在上面的程序中，ob2 对象没有继承任何弗雷，但定义了 name 属性和 test() 方法，接下来程序能直接使用。这在 Java 中是不行的，因为编译器只会把匿名内部类当成它所继承的父类处理。
+在上面的程序中，ob2 对象没有继承任何父类，但定义了 name 属性和 test() 方法，接下来程序能直接使用。这在 Java 中是不行的，因为编译器只会把匿名内部类当成它所继承的父类处理。
 
 Kotlin 的对象表达式可分为两种情形：
 
