--- a/Kotlin/面向对象（下）/接口.md
+++ b/Kotlin/面向对象（下）/接口.md
@@ -16,7 +16,7 @@
 }
 ```
 
-1. **Kotlin 的接口即可包含抽象方法，也可包含非抽象方法**
+1. **Kotlin 的接口既可包含抽象方法，也可包含非抽象方法**
 
     如果一个方法没有方法体，会自动为该方法添加 `abstract` 修饰
 
@@ -30,9 +30,9 @@
 
 
 
-3. **接口成员可支持 `private` 和 `public` 两种访问权限**
+3. **接口成员可支持 private 和 public 两种访问权限**
 
-    > 在 Java 中，只能用 `public`
+    > 在 Java 中，只能用 public
 
     抽象的只能且默认用`public`
 
