把图床换了

--- a/Android自定义View/视图篇/测量与布局.md
+++ b/Android自定义View/视图篇/测量与布局.md
@@ -4,8 +4,6 @@
 
 这里以`ViewGroup`为例讲述绘制流程
 
-
-
 ## ViewGroup 绘制流程
 
 绘制流程分为三步
@@ -99,7 +97,7 @@ MeasureSpec.getMode()
 
 效果图如下：
 
-![img](https://github.com/hahaha28/photos/raw/master/notebooks/Android/20200422171617.png)
+![img](http://img.inaction.fun/static/70507.png)
 
 **MyLinearLayout.kt**
 
@@ -159,7 +157,7 @@ class MyLinearLayout: ViewGroup{
 
 效果图如下：
 
-![img](https://github.com/hahaha28/photos/raw/master/notebooks/Android/IMG_20200423_155709.jpg)
+![img](http://img.inaction.fun/static/57802.jpg)
 
 [源代码见 gist](https://gist.github.com/hahaha28/485bba5a39158ebba6db1925d077bc64)
 
