--- a/Kotlin/数组和集合/集合概述.md
+++ b/Kotlin/数组和集合/集合概述.md
@@ -8,8 +8,8 @@
 
 * Collection集合体系继承树的简化图
 
-![Collection集合体系继承树简化图](https://github.com/hahaha28/photos/raw/master/notebooks/Kotlin/Collection集合体系继承树简化图.png)
+![Collection集合体系继承树简化图](http://img.inaction.fun/static/50474.png)
 
 * Map集合体系继承树图
 
-![Map集合体系继承树图](https://github.com/hahaha28/photos/raw/master/notebooks/Kotlin/Map集合体系继承树图.png)
+![Map集合体系继承树图](http://img.inaction.fun/static/15190.png)
