--- a/PS/基础知识/认识工作界面.md
+++ b/PS/基础知识/认识工作界面.md
@@ -1,6 +1,6 @@
 # 认识工作界面
 
-![PS工作界面](https://github.com/hahaha28/photos/raw/master/notebooks/PS/ps工作界面.png)
+![PS工作界面](http://img.inaction.fun/static/26296.png)
 
 
 
