--- a/Web/CSS/盒子模型.md
+++ b/Web/CSS/盒子模型.md
@@ -5,7 +5,7 @@
 * 内容与边框的距离是内边距
 * 盒子与盒子的距离是外边距
 
-![img](https://github.com/hahaha28/photos/raw/master/notebooks/Web/标准盒子模型.png)
+![img](http://img.inaction.fun/static/79980.png)
 
 
 
@@ -143,7 +143,7 @@ border: 1px soild red;
 - 下面的元素有上外边距margin-top，则他们之间的垂直间距不是margin-bottom与margin-top之和
 - **取两个值中的较大者**这种现象被称为相邻块元素垂直外边距的合并（也称外边距塌陷）。
 
-![img](https://github.com/hahaha28/photos/raw/master/notebooks/Web/www.png)
+![img](http://img.inaction.fun/static/50183.png)
 
 **解决方案：尽量给只给一个盒子添加margin值**
 
@@ -155,7 +155,7 @@ border: 1px soild red;
 - 父元素的上外边距会与子元素的上外边距发生合并
 - 合并后的外边距为两者中的较大者
 
-![img](https://github.com/hahaha28/photos/raw/master/notebooks/Web/n.png)
+![img](http://img.inaction.fun/static/26841.png)
 
 **解决方案：**
 
