--- a/Web/HTML/表格.md
+++ b/Web/HTML/表格.md
@@ -36,7 +36,7 @@
 
 > 三参为0，是指平时开发中，这三个参数 `border`、`cellspacing`、`cellpadding` 为0
 
-![img](https://github.com/hahaha28/photos/raw/master/notebooks/Web/table表格属性.jpg)
+![img](http://img.inaction.fun/static/39240.jpg)
 
 
 
