--- a/PS/工具/选区.md
+++ b/PS/工具/选区.md
@@ -12,7 +12,7 @@ alt + shift		以鼠标为中心构建正方形矩形
 ctrl + D		取消选区
 ```
 
-![img](https://github.com/hahaha28/photos/raw/master/notebooks/PS/矩形选框属性.png)
+![img](http://img.inaction.fun/static/45552.png)
 
 上面，从左到右：单选、并集（shift）、减（alt）、交集（shift+alt）
 
@@ -48,6 +48,6 @@ ctrl + D		取消选区
 
 可以缩放图层图像的大小，按 Enter 完成变换
 
-![img](https://raw.githubusercontent.com/hahaha28/photos/master/notebooks/PS/自由变换比例.png)
+![img](http://img.inaction.fun/static/65088.png)
 
 这个可以调整变换的比例，点中间的哪个可以锁定缩放比例。
