--- a/Web/flex/基本概念.md
+++ b/Web/flex/基本概念.md
@@ -2,7 +2,7 @@
 
 > 更多内容看这篇[文章](https://zhuanlan.zhihu.com/p/25303493)
 
-<img src="https://github.com/hahaha28/photos/raw/master/notebooks/Web/flex-container.png" alt="img" style="zoom: 50%;" />
+<img src="http://img.inaction.fun/static/63483.png" alt="img" style="zoom: 50%;" />
 
 
 
