--- a/Android自定义View/视图篇/事件分发.md
+++ b/Android自定义View/视图篇/事件分发.md
@@ -1,8 +1,6 @@
 # 事件分发
 
-[转载自这里](https://blog.csdn.net/u010707039/article/details/85211658)
-
-
+> [转载自这里](https://blog.csdn.net/u010707039/article/details/85211658)
 
 ## 基础知识
 
