--- a/Kotlin/数组和集合/集合概述.md
+++ b/Kotlin/数组和集合/集合概述.md
@@ -12,4 +12,4 @@
 
 * Map集合体系继承树图
 
-![Map集合体系继承树图](http://img.inaction.fun/static/15190.png)
+<img src="http://img.inaction.fun/static/15190.png" alt="Map集合体系继承树图" style="zoom: 67%;" />
