--- a/Android/小知识/常用库记录.md
+++ b/Android/小知识/常用库记录.md
@@ -28,4 +28,9 @@
 
   [BaseRecyclerViewAdapterHelper](https://github.com/CymChad/BaseRecyclerViewAdapterHelper)
 
+* 高斯模糊
+
+  [EasyBlur](https://github.com/pinguo-zhouwei/EasyBlur)
+
   
+
