--- a/Android/小知识/常用库记录.md
+++ b/Android/小知识/常用库记录.md
@@ -1,36 +1,26 @@
 # 常用库记录
 
-* 图片轮播
+## UI相关
 
-  [BannerViewPager](https://github.com/zhpanvip/BannerViewPager)
+| 简介                          | 地址                                                         |
+| ----------------------------- | ------------------------------------------------------------ |
+| 图片轮播                      | [BannerViewPager](https://github.com/zhpanvip/BannerViewPager) |
+| 下拉刷新，上拉加载            | [SmartRefreshLayout](https://github.com/scwang90/SmartRefreshLayout) |
+| 红心、五角星、笑脸、点赞 按钮 | [ShineButton](https://github.com/ChadCSong/ShineButton)      |
+| 验证码输入框                  | [VerifyEditText](https://github.com/cirno-poi/VerifyEditText) |
+| 持续滑动布局                  | [ConsecutiveScroller](https://github.com/donkingliang/ConsecutiveScroller) |
+| 圆形图片                      | [CircleImageView](https://github.com/hdodenhof/CircleImageView) |
+| 高斯模糊                      | [EasyBlur](https://github.com/pinguo-zhouwei/EasyBlur)       |
+| 对话框                        | [DialogV3](https://github.com/kongzue/DialogV3)              |
 
-* 下拉刷新，上拉加载
 
-  [SmartRefreshLayout](https://github.com/scwang90/SmartRefreshLayout)
 
-* 红心、五角星、笑脸、点赞 按钮
+## 简化操作
 
-  [ShineButton](https://github.com/ChadCSong/ShineButton)
-  
-* 验证码输入框
-
-  [VerifyEditText](https://github.com/cirno-poi/VerifyEditText)
-
-* 持续滑动布局
-
-  [ConsecutiveScroller](https://github.com/donkingliang/ConsecutiveScroller)
-
-* 圆形图片
-
-  [CircleImageView](https://github.com/hdodenhof/CircleImageView)
-
-* RecyclerViewAdapter封装
-
-  [BaseRecyclerViewAdapterHelper](https://github.com/CymChad/BaseRecyclerViewAdapterHelper)
-
-* 高斯模糊
-
-  [EasyBlur](https://github.com/pinguo-zhouwei/EasyBlur)
-
-  
+| 简介                             | 地址                                                         |
+| -------------------------------- | ------------------------------------------------------------ |
+| RecyclerViewAdapter封装          | [BaseRecyclerViewAdapterHelper](https://github.com/CymChad/BaseRecyclerViewAdapterHelper) |
+| 简化ViewBinding和DataBinding使用 | [Binding](https://github.com/hi-dhl/Binding)                 |
+| 权限申请                         | [PermissionX](https://github.com/guolindev/PermissionX)      |
+| LiveEventBus                     | [LiveEventBus](https://github.com/JeremyLiao/LiveEventBus)   |
 
